layout issue

--- a/styles.css
+++ b/styles.css
@@ -31,28 +31,26 @@
 
 html {
   font-size: 62.5%;
-  height: 100%;
 }
+
 
 body {
   font-family: 'Hanken Grotesk', sans-serif;
   font-size: 1.3rem;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   color: hsla(221, 100%, 96%, 0.6);
 }
 
-.wrapper {
-  width: 46%;
-  position: relative;
-  top: 50%;
-  margin: -15% auto;
-}
-
-.row {
+main {
+  width: 50%;
   overflow: hidden;
   display: flex;
-
+  flex-wrap: wrap;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   box-shadow: var(--pale-blue) -4px 9px 25px 10px;
@@ -61,10 +59,12 @@ body {
 .col-left,
 .col-right {
   padding: 2em;
-  flex-basis: 50%;
+  /* flex-basis: 50%; */
+  width: 50%;
 }
 
 .col-left {
+  
   background: linear-gradient(
     180deg,
     var(--light-slate-blue-background),
@@ -77,12 +77,13 @@ body {
 .col-left h3 {
   color: var(--pale-blue);
 }
+
 .col-left h2 {
   margin-bottom: 0.5em;
 }
 
 .left-content {
-  width: 80%;
+  width: 75%;
   margin: 0 auto;
 }
 
@@ -180,16 +181,13 @@ button {
 }
 
 /* Media Query */
-@media screen and (max-width: 500px) {
-  
-
-  .wrapper {
-    width: 100%;
-    margin: 0;
-    top: 0;
+@media screen and (max-width: 450px) {
+  body {
+    display: block;
   }
-  .row {
-    flex-direction: column;
+
+  main {
+    width: 100%;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
     box-shadow: none;
@@ -197,7 +195,7 @@ button {
 
   .col-left,
   .col-right {
-    flex-basis: 100%;
+    width: 100%;
   }
 
   .col-left {
